# iggy

./: .asf.yaml  .convco  .dockerignore  .gitignore  .markdownlint.json  .markdownlint.yml  .pre-commit-config.yaml  .taplo.toml  .typos.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEPENDENCIES.md  DISCLAIMER  Dockerfile  Dockerfile.ci  Dockerfile.ci.dockerignore  Dockerfile.connectors.ci  Dockerfile.cross  Dockerfile.debug  Dockerfile.mcp.ci  LICENSE  NOTICE  PULL_REQUEST_TEMPLATE.md  README.md  cliff.toml  codecov.yml  dependencies.md  docker-compose.yml  justfile  licenserc.toml  rust-toolchain.toml  rust_out
bdd/python/: Dockerfile  pylock.toml  pyproject.toml  requirements.txt
bdd/python/tests/: conftest.py  test_basic_messaging.py
bdd/rust/: Cargo.toml  Dockerfile
bdd/rust/tests/: basic_messaging.rs  leader_redirection.rs
bench/: Cargo.toml
bench/report/: Cargo.toml
bench/report/src/: lib.rs  prints.rs  utils.rs
bench/src/: main.rs  plot.rs  runner.rs
bench/src/actors/: consumer.rs  mod.rs  producer.rs  producing_consumer.rs  utils.rs
bench/src/analytics/: mod.rs  record.rs  report_builder.rs
bench/src/args/: common.rs  defaults.rs  examples.rs  output.rs
bench/src/benchmarks/: benchmark.rs  common.rs  consumer_benchmark.rs  consumer_group_benchmark.rs  end_to_end_producing_consumer_group.rs  mod.rs  pinned_producer_and_consumer.rs  producer_and_consumer_benchmark.rs  producer_and_consumer_group_benchmark.rs  producer_benchmark.rs  producing_consumer_benchmark.rs  producing_consumer_group_benchmark.rs
bench/src/rate_limiter/: mod.rs
bench/src/utils/: batch_generator.rs  finish_condition.rs  mod.rs
cli/: Cargo.toml
cli/src/: credentials.rs  error.rs  main.rs
cli/src/args/: client.rs  common.rs  context.rs  message.rs  mod.rs  partition.rs  personal_access_token.rs  system.rs  topic.rs  user.rs
core/ai/mcp/: .dockerignore  Cargo.toml  Dockerfile  README.md  config.toml
core/bench/: Cargo.toml  README.md
core/bench/dashboard/: README.md
core/bench/report/: Cargo.toml
core/bench/runner/: Cargo.toml
core/bench/src/: main.rs  plot.rs  runner.rs
core/binary_protocol/: Cargo.toml
core/binary_protocol/src/: codec.rs  codes.rs  dispatch.rs  error.rs  frame.rs  framing.rs  identifier.rs  lib.rs  message_layout.rs  message_view.rs  namespace.rs
core/cli/: Cargo.toml  README.md  build.rs
core/cli/src/: credentials.rs  error.rs  lib.rs  logging.rs  main.rs
core/common/: Cargo.toml
core/common/src/: certificates.rs  consumer_group_client_state.rs  lib.rs  macros.rs  wire_conversions.rs
core/consensus/: Cargo.toml
core/consensus/src/: client_table.rs  impls.rs  lib.rs  metadata_helpers.rs  namespaced_pipeline.rs  observability.rs  plane_helpers.rs  plane_mux.rs  view_change_quorum.rs  vsr_timeout.rs
core/examples/: Cargo.toml  README.md
core/integration/: Cargo.toml  build.rs
core/integration/src/: bench_utils.rs  http_client.rs  lib.rs  quic_client.rs  tcp_client.rs  test_connectors_runtime.rs  test_mcp_server.rs  test_server.rs  test_tls_utils.rs  websocket_client.rs
core/integration/tests/: mod.rs
core/sdk/: Cargo.toml  README.md
core/sdk/src/: args.rs  bytes_serializable.rs  client.rs  client_error.rs  client_provider.rs  confirmation.rs  identifier.rs  leader_aware.rs  lib.rs  prelude.rs  session.rs  snapshot.rs  vsr.rs
core/server/: Cargo.toml  Dockerfile  README.md  build.rs  config.toml  server.http
core/server-ng/: Cargo.toml  Dockerfile  build.rs  config.toml
core/server-ng/src/: args.rs  auth.rs  bootstrap.rs  config_writer.rs  consumer_group.rs  dispatch.rs  lib.rs  login_register.rs  main.rs  partition_helpers.rs  partition_reconciler.rs  pat.rs  personal_access_token_cleaner.rs  responses.rs  server_error.rs  session_manager.rs  users.rs  wire.rs
core/server-ng/tests/: sdk_e2e.rs
core/server/src/: args.rs  bootstrap.rs  build.rs  configs.rs  diagnostics.rs  lib.rs  main.rs  server_error.rs  shard_allocator.rs  versioning.rs
core/server_common/: Cargo.toml
core/server_common/src/: bootstrap.rs  buffer.rs  certificates.rs  consensus_message.rs  diagnostics.rs  executor.rs  in_flight.rs  indexes_mut.rs  iobuf.rs  lib.rs  memory_pool.rs  messages_batch_mut.rs  messages_batch_set.rs  send_messages2.rs
core/shard/: Cargo.toml
core/shard/src/: builder.rs  config.rs  coordinator.rs  lib.rs  metrics.rs  router.rs  shards_table.rs
examples/: Cargo.toml  README.md
examples/csharp/: .editorconfig  Iggy_SDK.Examples.sln  README.md
examples/go/: README.md  go.mod  go.sum
examples/go/common/: consts.go
examples/java/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
examples/node/: .editorconfig  .gitignore  README.md  eslint.config.ts  package-lock.json  package.json  test-examples.sh
examples/node/src/: index.ts
examples/php/: README.md
examples/php/basic/: consumer.php  producer.php
examples/php/getting-started/: consumer.php  producer.php
examples/php/src/: common.php
examples/python/: .gitignore  README.md  pylock.toml  pyproject.toml  requirements.txt
examples/python/basic/: consumer.py  producer.py
examples/python/getting-started/: consumer.py  producer.py
examples/rust/: Cargo.toml  README.md
examples/rust/src/: lib.rs
examples/src/: lib.rs
examples/src/shared/: client.rs  system.rs
foreign/cpp/: .bazelrc  .clang-format  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CMakeLists.txt  CONTRIBUTORS.md  Cargo.toml  MODULE.bazel  README.md  build.rs
foreign/cpp/.devcontainer/: devcontainer.json  post-install.sh
foreign/cpp/docs/: CMakeLists.txt
foreign/cpp/include/: iggy.hpp
foreign/cpp/sdk/: binary.h  client.cc  (+9 more)
foreign/python/: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.test  README.md  apache_iggy.pyi  docker-compose.test.yml  iggy_py.pyi  pylock.toml  pyproject.toml
integration/: Cargo.toml
integration/src/: file.rs  tcp_client.rs  test_server.rs
integration/tests/: mod.rs
server/: Cargo.toml  server.http
server/src/: command.rs  lib.rs  main.rs  versioning.rs
tools/: Cargo.toml
(+4447 files in other folders)
