# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
members = [
    "bdd/rust",
    "core/ai/mcp",
    "core/bench",
    "core/bench/dashboard/frontend",
    "core/bench/dashboard/server",
    "core/bench/dashboard/shared",
    "core/bench/report",
    "core/bench/runner",
    "core/binary_protocol",
    "core/cli",
    "core/common",
    "core/connectors/runtime",
    "core/connectors/sdk",
    "core/connectors/sinks/postgres_sink",
    "core/connectors/sinks/quickwit_sink",
    "core/connectors/sinks/stdout_sink",
    "core/connectors/sources/postgres_source",
    "core/connectors/sources/random_source",
    "core/integration",
    "core/sdk",
    "core/server",
    "core/tools",
    "examples/rust",
]
exclude = ["foreign/python"]
resolver = "2"

[workspace.dependencies]
aes-gcm = "0.10.3"
ahash = { version = "0.8.12", features = ["serde"] }
anyhow = "1.0.100"
argon2 = "0.5.3"
async-broadcast = "0.7.2"
async-channel = "2.5.0"
async-dropper = { version = "0.3.1", features = ["tokio", "simple"] }
async-trait = "0.1.89"
async_zip = { version = "0.0.18", features = [
    "tokio",
    "lzma",
    "bzip2",
    "xz",
    "deflate",
    "zstd",
] }
axum = { version = "0.8.6", features = ["macros"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
base64 = "0.22.1"
bench-dashboard-frontend = { path = "core/bench/dashboard/frontend" }
bench-dashboard-server = { path = "core/bench/dashboard/server" }
bench-dashboard-shared = { path = "core/bench/dashboard/shared" }
bench-report = { path = "core/bench/report" }
bench-runner = { path = "core/bench/runner" }
bincode = { version = "2.0.1", features = ["serde"] }
blake3 = "1.8.2"
bon = "3.8.1"
byte-unit = { version = "5.1.6", default-features = false, features = [
    "serde",
    "byte",
    "std",
] }
bytes = "1.10.1"
charming = "0.6.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive", "wrap_help"] }
colored = "3.0.0"
comfy-table = "7.2.1"
compio = { version = "0.16.0", features = [
    "runtime",
    "macros",
    "io-uring",
    "time",
    "rustls",
] }
compio-io = "0.8.2"
compio-net = "0.9.0"
compio-quic = "0.5.1"
compio-tls = { version = "0.7.1", features = [
    "rustls",
], default-features = false }
compio-ws = { git = "https://github.com/krishvishal/compio-ws", rev = "b30c9e4cd2fe607faa81b4c7eff2d14b6140f15d", features = [
    "rustls",
] }
console-subscriber = "0.5.0"
crc32fast = "1.5.0"
crossbeam = "0.8.4"
cyper = { version = "0.6.2", features = ["rustls"], default-features = false }
cyper-axum = { version = "0.6.0" }
dashmap = "6.1.0"
derive-new = "0.7.0"
derive_builder = "0.20.2"
derive_more = { version = "2.0.1", features = ["full"] }
dirs = "6.0.0"
dlopen2 = "0.8.0"
dotenvy = "0.15.7"
enum_dispatch = "0.3.13"
env_logger = "0.11.8"
figlet-rs = "0.1.5"
figment = { version = "0.10.19", features = ["toml", "env"] }
flume = "0.11.1"
futures = "0.3.31"
futures-util = "0.3.31"
human-repr = "1.1.0"
humantime = "2.3.0"
iggy = { path = "core/sdk", version = "0.8.0-edge.2" }
iggy_binary_protocol = { path = "core/binary_protocol", version = "0.8.0-edge.2" }
iggy_common = { path = "core/common", version = "0.8.0-edge.2" }
iggy_connector_sdk = { path = "core/connectors/sdk", version = "0.1.0" }
integration = { path = "core/integration" }
keyring = { version = "3.6.3", features = ["sync-secret-service", "vendored"] }
lazy_static = "1.5.0"
log = "0.4.28"
mimalloc = "0.1"
mockall = "0.13.1"
nonzero_lit = "0.1.2"
once_cell = "1.21.3"
passterm = "=2.0.1"
postcard = { version = "1.1.3", features = ["alloc"] }
predicates = "3.1.3"
quinn = "0.11.9"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "rustls-tls",
] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.7.0"
rust-s3 = { version = "0.37.0", default-features = false, features = [
    "tokio-rustls-tls",
    "tags",
] }
rustls = { version = "0.23.35", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
serde_with = { version = "3.15.1", features = ["base64", "macros"] }
serde_yaml_ng = "0.10.0"
serial_test = "3.2.0"
server = { path = "core/server" }
simd-json = { version = "0.17.0", features = ["serde_impl"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
sysinfo = "0.37.2"
tempfile = "3.23.0"
test-case = "3.3.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
toml = "0.9.8"
tower-http = { version = "0.6.6", features = [
    "add-extension",
    "cors",
    "trace",
] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
    "fmt",
    "env-filter",
    "ansi",
] }
trait-variant = "0.1.2"
tungstenite = "0.28.0"
twox-hash = { version = "2.1.2", features = ["xxhash32"] }
uuid = { version = "1.18.1", features = [
    "v4",
    "v7",
    "fast-rng",
    "serde",
    "zerocopy",
] }
webpki-roots = "1.0.4"
zip = "6.0.0"

[profile.release]
lto = true
codegen-units = 1
