# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
members = [
    "bdd/rust",
    "core/ai/mcp",
    "core/bench",
    "core/bench/dashboard/frontend",
    "core/bench/dashboard/server",
    "core/bench/dashboard/shared",
    "core/bench/report",
    "core/bench/runner",
    "core/binary_protocol",
    "core/cli",
    "core/clock",
    "core/common",
    "core/connectors/runtime",
    "core/connectors/sdk",
    "core/connectors/sinks/elasticsearch_sink",
    "core/connectors/sinks/iceberg_sink",
    "core/connectors/sinks/postgres_sink",
    "core/connectors/sinks/quickwit_sink",
    "core/connectors/sinks/stdout_sink",
    "core/connectors/sources/elasticsearch_source",
    "core/connectors/sources/postgres_source",
    "core/connectors/sources/random_source",
    "core/consensus",
    "core/integration",
    "core/journal",
    "core/message_bus",
    "core/metadata",
    "core/partitions",
    "core/sdk",
    "core/server",
    "core/tools",
    "examples/rust",
]
exclude = ["foreign/python"]
resolver = "2"

[workspace.dependencies]
aes-gcm = "0.10.3"
ahash = { version = "0.8.12", features = ["serde"] }
anyhow = "1.0.100"
argon2 = "0.5.3"
arrow = "=55.2.0"
arrow-array = "=55.2.0"
arrow-json = "=55.2.0"
async-broadcast = "0.7.2"
async-channel = "2.5.0"
async-dropper = { version = "0.3.1", features = ["tokio", "simple"] }
async-trait = "0.1.89"
async_zip = { version = "0.0.18", features = [
    "tokio",
    "lzma",
    "bzip2",
    "xz",
    "deflate",
    "zstd",
] }
axum = { version = "0.8.8", features = ["macros"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
base64 = "0.22.1"
bench-dashboard-frontend = { path = "core/bench/dashboard/frontend" }
bench-dashboard-server = { path = "core/bench/dashboard/server" }
bench-dashboard-shared = { path = "core/bench/dashboard/shared" }
bench-report = { path = "core/bench/report" }
bench-runner = { path = "core/bench/runner" }
bit-set = "0.8.0"
blake3 = "1.8.3"
bon = "3.8.2"
byte-unit = { version = "5.2.0", default-features = false, features = [
    "serde",
    "byte",
    "std",
] }
bytemuck = { version = "1.24" }
bytes = "1.11.0"
charming = "0.6.0"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "wrap_help"] }
colored = "3.1.1"
comfy-table = "7.2.2"
compio = { version = "0.17.0", features = [
    "runtime",
    "macros",
    "io-uring",
    "time",
    "rustls",
] }
compio-io = "0.8.4"
compio-net = "0.10.0"
compio-quic = "0.6.0"
compio-tls = { version = "0.8.0", features = [
    "rustls",
], default-features = false }
compio-ws = "0.2.0"
console-subscriber = "0.5.0"
crossbeam = "0.8.4"
cyper = { version = "0.7.1", features = ["rustls"], default-features = false }
cyper-axum = { version = "0.7.1" }
dashmap = "6.1.0"
derive-new = "0.7.0"
derive_builder = "0.20.2"
derive_more = { version = "2.1.1", features = ["full"] }
dirs = "6.0.0"
dlopen2 = "0.8.2"
dotenvy = "0.15.7"
enum_dispatch = "0.3.13"
env_logger = "0.11.8"
err_trail = { version = "0.11.0", features = ["tracing"] }
error_set = "0.9.1"
figlet-rs = "0.1.5"
figment = { version = "0.10.19", features = ["toml", "env"] }
flume = "0.12.0"
futures = "0.3.31"
futures-util = "0.3.31"
human-repr = "1.1.0"
humantime = "2.3.0"
hwlocality = "1.0.0-alpha.11"
iceberg = "=0.6.0"
iceberg-catalog-rest = "=0.6.0"
iggy = { path = "core/sdk", version = "0.8.1-edge.1" }
iggy_binary_protocol = { path = "core/binary_protocol", version = "0.8.1-edge.1" }
iggy_common = { path = "core/common", version = "0.8.1-edge.1" }
iggy_connector_sdk = { path = "core/connectors/sdk", version = "0.1.1-edge.1" }
integration = { path = "core/integration" }
keyring = { version = "3.6.3", features = ["sync-secret-service", "vendored"] }
lazy_static = "1.5.0"
left-right = "0.11"
log = "0.4.29"
metadata = { path = "core/metadata" }
mimalloc = "0.1"
mockall = "0.14.0"
nix = { version = "0.30.1", features = ["fs", "resource", "sched"] }
nonzero_lit = "0.1.2"
once_cell = "1.21.3"
parquet = "=55.2.0"
passterm = "=2.0.1"
postcard = { version = "1.1.3", features = ["alloc"] }
predicates = "3.1.3"
quinn = "0.11.9"
rand = "0.9.2"
rand_xoshiro = "0.7.0"
regex = "1.12.2"
reqwest = { version = "=0.12.28", default-features = false, features = [
    "json",
    "rustls-tls",
] }
reqwest-middleware = { version = "=0.4.2", features = ["json"] }
reqwest-retry = "=0.8.0"
reqwest-tracing = "=0.5.8"
rmp-serde = "1.3.1"
rust-s3 = { version = "0.37.1", default-features = false, features = [
    "tokio-rustls-tls",
    "tags",
] }
rustls = { version = "0.23.36", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_with = { version = "3.16.1", features = ["base64", "macros"] }
serde_yaml_ng = "0.10.0"
serial_test = "3.3.1"
server = { path = "core/server" }
simd-json = { version = "0.17.0", features = ["serde_impl"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
sysinfo = "0.37.2"
tempfile = "3.24.0"
test-case = "3.3.1"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
toml = "0.9.11"
tower-http = { version = "0.6.8", features = [
    "add-extension",
    "cors",
    "trace",
] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "fmt",
    "env-filter",
    "ansi",
] }
trait-variant = "0.1.2"
tungstenite = "0.28.0"
twox-hash = { version = "2.1.2", features = ["xxhash32"] }
uuid = { version = "1.19.0", features = [
    "v4",
    "v7",
    "fast-rng",
    "serde",
    "zerocopy",
] }
webpki-roots = "1.0.5"
zip = "=7.0.0"

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
