# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "bench"
version = "0.2.3"
edition = "2021"
license = "Apache-2.0"
# Due to dependency to integration, which has a dependency to server, setting
# mimalloc on server is also setting it on bench.

[dependencies]
async-trait = "0.1.87"
atomic-time = "0.1.5"
bytes = "1.10.1"
charming = "0.4.0"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
figlet-rs = "0.1.5"
futures = "0.3.31"
hostname = "0.4.0"
human-repr = "1.1.0"
iggy = { path = "../sdk" }
iggy-bench-report = { path = "report" }
integration = { path = "../integration" }
nonzero_lit = "0.1.2"
serde = { version = "1.0.219", features = ["derive"] }
sysinfo = "0.33.1"
tokio = { version = "1.44.0", features = ["full"] }
toml = "0.8.20"
tracing = { version = "0.1.41" }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = { version = "1.15.1", features = ["serde"] }

[[bin]]
name = "iggy-bench"
path = "src/main.rs"
