# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iggy-cli"
version = "0.8.13"
edition = "2021"
authors = ["bartosz.ciesla@gmail.com"]
repository = "https://github.com/apache/iggy"
homepage = "https://iggy.apache.org"
description = "CLI for Iggy message streaming platform"
license = "Apache-2.0"
keywords = ["iggy", "cli", "messaging", "streaming"]
readme = "../README.md"

[features]
default = ["login-session"]
login-session = ["dep:keyring"]

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = "4.5.46"
figlet-rs = "0.1.5"
iggy = { path = "../sdk", features = ["iggy-cli"], version = "0.6.202" }
keyring = { version = "3.6.2", features = [
    "sync-secret-service",
    "vendored",
], optional = true }
passterm = "=2.0.1"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "fmt",
    "env-filter",
] }

[[bin]]
name = "iggy"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
