# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iggy_examples"
version = "0.0.5"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
anyhow = "1.0.98"
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
futures-util = "0.3.31"
iggy = { path = "../sdk" }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[[example]]
name = "getting-started-consumer"
path = "src/getting-started/consumer/main.rs"

[[example]]
name = "getting-started-producer"
path = "src/getting-started/producer/main.rs"

[[example]]
name = "basic-consumer"
path = "src/basic/consumer/main.rs"

[[example]]
name = "basic-producer"
path = "src/basic/producer/main.rs"

[[example]]
name = "message-envelope-consumer"
path = "src/message-envelope/consumer/main.rs"

[[example]]
name = "message-envelope-producer"
path = "src/message-envelope/producer/main.rs"

[[example]]
name = "message-headers-consumer"
path = "src/message-headers/consumer/main.rs"

[[example]]
name = "message-headers-producer"
path = "src/message-headers/producer/main.rs"

[[example]]
name = "multi-tenant-consumer"
path = "src/multi-tenant/consumer/main.rs"

[[example]]
name = "multi-tenant-producer"
path = "src/multi-tenant/producer/main.rs"

[[example]]
name = "new-sdk-consumer"
path = "src/new-sdk/consumer/main.rs"

[[example]]
name = "new-sdk-producer"
path = "src/new-sdk/producer/main.rs"

[[example]]
name = "stream-basic"
path = "src/stream-builder/stream-basic/main.rs"

[[example]]
name = "stream-consumer"
path = "src/stream-builder/stream-consumer/main.rs"

[[example]]
name = "stream-consumer-config"
path = "src/stream-builder/stream-consumer-config/main.rs"

[[example]]
name = "stream-producer"
path = "src/stream-builder/stream-producer/main.rs"

[[example]]
name = "stream-producer-config"
path = "src/stream-builder/stream-producer-config/main.rs"

