[package]
name = "integration"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
assert_cmd = "2.0.16"
async-trait = "0.1.87"
bytes = "1.10.1"
chrono = "0.4.40"
ctor = "0.4.1"
derive_more = "2.0.1"
env_logger = "0.11.7"
futures = "0.3.31"
humantime = "2.1.0"
iggy = { path = "../sdk", features = ["iggy-cli"] }
keyring = "3.6.2"
lazy_static = "1.5.0"
libc = "0.2.171"
log = "0.4.26"
predicates = "3.1.3"
regex = "1.11.1"
serial_test = "3.2.0"
server = { path = "../server" }
tempfile = "3.18.0"
test-case = "3.3.1"
tokio = { version = "1.44.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
twox-hash = { version = "2.1.0", features = ["xxhash32"] }
uuid = { version = "1.15.1", features = ["v7", "fast-rng", "zerocopy"] }
zip = "2.2.3"

# Some tests are failing in CI due to lack of IPv6 interfaces
# inside the docker containers. This is a temporary workaround (hopefully).
[features]
ci-qemu = []
