# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "server"
version = "0.5.0"
edition = "2021"
build = "src/build.rs"
license = "Apache-2.0"

# This is a workaround for cargo-udeps to ignore these dependencies
# in case if feature 'tokio-console' is enabled.
[package.metadata.cargo-udeps.ignore]
normal = ["tracing-appender"]

[features]
default = ["mimalloc"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
disable-mimalloc = []
mimalloc = ["dep:mimalloc"]

[dependencies]
ahash = { version = "0.8.11" }
anyhow = "1.0.98"
async_zip = { version = "0.0.17", features = [
    "tokio",
    "lzma",
    "bzip2",
    "xz",
    "deflate",
    "zstd",
] }
axum = "0.8.3"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
bcrypt = "0.17.0"
bincode = { version = "2.0.1", features = ["serde"] }
blake3 = "1.8.1"
bytes = "1.10.1"
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
console-subscriber = { version = "0.4.1", optional = true }
crossbeam = "0.8.4"
dashmap = "6.1.0"
derive_more = "2.0.1"
dotenvy = { version = "0.15.7" }
enum_dispatch = "0.3.13"
error_set = { version = "0.8.5", features = ["tracing"] }
figlet-rs = "0.1.5"
figment = { version = "0.10.19", features = ["toml", "env"] }
flume = "0.11.1"
futures = "0.3.31"
human-repr = "1.1.0"
iggy = { path = "../sdk" }
jsonwebtoken = "9.3.1"
lending-iterator = "0.1.7"
mimalloc = { version = "0.1", optional = true }
moka = { version = "0.12.10", features = ["future"] }
nix = { version = "0.29", features = ["fs"] }
once_cell = "1.21.3"
openssl = { version = "0.10.72", features = ["vendored"] }
opentelemetry = { version = "0.29.1", features = ["trace", "logs"] }
opentelemetry-appender-tracing = { version = "0.29.1", features = ["log"] }
opentelemetry-otlp = { version = "0.29.0", features = [
    "logs",
    "trace",
    "grpc-tonic",
    "http",
    "http-proto",
    "reqwest-client",
    "tokio",
] }
opentelemetry-semantic-conventions = { version = "0.29.0" }
opentelemetry_sdk = { version = "0.29.0", features = [
    "rt-tokio",
    "logs",
    "trace",
    "tokio",
    "experimental_async_runtime",
    "experimental_logs_batch_log_processor_with_async_runtime",
    "experimental_trace_batch_span_processor_with_async_runtime",
] }
prometheus-client = "0.23.1"
quinn = { version = "0.11.7" }
rcgen = "0.13.2"
reqwest = { version = "0.12.15", features = [
    "rustls-tls",
    "rustls-tls-no-provider",
] }
ring = "0.17.14"
rust-s3 = { version = "0.35.1", features = ["default"] }
rustls = { version = "0.23.26" }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_with = { version = "3.12.0", features = ["base64", "macros"] }
static-toml = "1.3.0"
strum = { version = "0.27.1", features = ["derive"] }
sysinfo = "0.34.2"
tempfile = "3.19"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-util = { version = "0.7.14", features = ["compat"] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = [
    "add-extension",
    "cors",
    "trace",
] }
tracing = { version = "0.1.41" }
tracing-appender = "0.2.3"
tracing-opentelemetry = { version = "0.30.0" }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
twox-hash = { version = "2.1.0", features = ["xxhash32"] }
ulid = "1.2.1"
uuid = { version = "1.16.0", features = ["v7", "fast-rng", "zerocopy"] }

[build-dependencies]
figment = { version = "0.10.19", features = ["json", "toml", "env"] }
vergen-git2 = { version = "1.0.7", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }

[dev-dependencies]
mockall = "0.13.1"
serial_test = "3.2.0"

[[bin]]
name = "iggy-server"
path = "src/main.rs"
